HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/RefinementDiagnosticsTable/Expected.uv
//! Expected diagnostic metadata for the RefinementDiagnosticsTable rejected-source specimen.

expectedDiagnostic("E-TYP-1956", "diag-table.14.RefinementPolymorphismDiagnostics")
